compiler/tests/fixtures/valid/query_equality_criterion.viv
// Query with == numeric criterion

action test-act:
    roles:
        @a:
            as: initiator


query exact-importance:
    importance:
        ==: 5
