compiler/tests/fixtures/invalid/semantics/multiple_initiator_roles.viv
// Invalid: action has multiple initiator roles

action confused:
    roles:
        @leader:
            as: initiator
        @also-leader:
            as: initiator
